--- a/src/app/homepage/section2/section2.module.css
+++ b/src/app/homepage/section2/section2.module.css
@@ -3,18 +3,23 @@
     justify-content: space-between;
     padding: 20px;
     background-color: white;
+    padding-top: 41px;
+    padding-bottom: 41px;
 }
 
 .section {
     text-align: center;
     max-width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .icon {
     width: 25px;
     height: 25px;
     margin-bottom: 10px;
-    margin-left: 85px;
+    
 }
 
 .title {
