fixed folder structure + edited about us css + added media queriers

--- a/src/app/aboutUs/aboutUs.module.css
+++ b/src/app/aboutUs/aboutUs.module.css
@@ -2,7 +2,7 @@
 
 .aboutus {
     display:grid;
-    background-color: #F5E9E9;
+    background-color: #E6EAE4;
     color: #585858;
     padding: 50px 20px;
     margin: 50px auto; 
@@ -10,53 +10,137 @@
     height: 20vh;
     align-items: center;
     text-align: center;
+    font-size: 24px;
+}
+
+.firstContainer, .secondContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 0px;
+    font-size: 17px;
+    color: #585858;
 }
 
 
-.ourstory img, .mission img {
-    max-width: 100%;
+.firstLeft {
+    flex: 1;
+    padding: 60px;
+    text-align: left;
+}
+
+.firstLeft h2 {
+    font-size: 24px;
+    color: #a87878;
+}
+
+
+.firstRight {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 60px;
+    
+    
+}
+
+.firstRight img {
+    width: 400px;
     border-radius: 10px;
 }
 
-.ourstoryBar {
-    display: flex;
-    background-color: #fdfdfd;
-    color: #767676;
-    border-radius: 0px;
-    margin-bottom: 50px;
-    margin-left: 40%;
-    margin: 30px 70px ; 
-    gap: 25rem;
-    width: 70%;
+
+
+
+.secondLeft {
+    flex: 1;
+    padding: 60px;
+
+
+}
+
+.secondLeft img {
+    width: 400px;
+    border-radius: 10px;
+}
+
+
+.secondRight {
+    flex: 1;
     text-align: left;
+    justify-content: flex-end;
+    padding-right: 60px;
+}
+
+.secondRight h2 {
+    font-size: 24px;
+    color: #a87878;
+}
+
+
+
+
+
+.right {
+   padding-left: 340px;
+}
+
+
+
+.right img {
+    width: 400px;
+    height: 300px;
+
+}
+
+.left img {
+    width: 400px;
+    height: 300px;
+    
+}
+
+.centeringContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 60px;
 }
 
 .quoteBar {
     display:grid;
-    background-color: #F5E9E9;
+    background-color: #E6EAE4;
     color: #585858;
-    padding: 20px 40px;
-    margin-bottom: 50px;
+    padding: 30px 40px;
     border-radius: 15px;
-    margin: 50px auto; 
-    width: 70%;
-    height: 35vh;
-    align-items: center;
+    width: 60%;
+
     text-align: center;
+    font-size: 18px;
 }
 
-.missionBar {
-    display: flex;
-    background-color: #fdfdfd;
-    color: #767676;
-    border-radius: 0px;
-    margin-bottom: 50px;
-    margin-left: 70%;
-    margin: 20px 80px ; 
-    gap: 35rem;
-    width: 80%;
-    align-items: center;
-    text-align: left;
+.quoteBar h4 {
+    font-size: 20px;
 }
 
+@media (max-width: 1024px) {
+    .firstContainer, .secondContainer {
+        flex-direction: column;
+        text-align: center;
+        padding: 20px;
+    }
 
+    .firstLeft, .secondRight, .firstRight, .secondLeft {
+        padding: 20px;
+    }
+
+    .firstRight img, .secondLeft img {
+        width: 300px;
+        margin: 0 auto;
+    }
+
+    .quoteBar {
+        width: 80%;
+    }
+}
